JBTM-1298 Increased the permgen size for the test